<resources>
    <string name="app_name">Scanbot SDK RTU UI Example</string>
    <string name="scanbot_sdk_demo">Scanbot SDK RTU UI Example</string>
    <string name="no_license_found_the_app_will_terminate_after_one_minute">No license key set. Trial mode is active. The app will stop working after one minute.</string>
    <string name="document_scanner">Document Scanner</string>
    <string name="scan_document">Scan Document</string>
    <string name="scan_document_finder">Scan Document with Finder</string>
    <string name="import_image">Import Image</string>
    <string name="import_pdf">Import Pdf</string>
    <string name="view_images">View Images</string>
    <string name="data_detectors">Data Detectors</string>
    <string name="scan_qr_code">Scan QR-/Barcode</string>
    <string name="scan_qr_code_with_image">Scan QR-/Barcode with image</string>
    <string name="scan_qr_code_with_selection_overlay">Scan QR-/Barcode with selection overlay</string>
    <string name="scan_qr_batch_mode">Scan Multiple QR-/Barcodes</string>
    <string name="scan_qr_unique_batch_mode">Scan Unique Multiple QR-/Barcodes</string>
    <string name="scan_qr_find_and_pick_mode">Find and Pick QR-/Barcodes</string>
    <string name="scan_qr_artu">Scan QR-/Barcodes in Compose Barcode scanner view</string>
    <string name="scan_mrz">Scan MRZ</string>
    <string name="scan_ehic">Scan European Health Insurance Card</string>
    <string name="multiple_object_detector">Multiple objects detector</string>
    <string name="scan_mc">Medical Certificate recognizer</string>
    <string name="copyright_note">© 2019 by doo GmbH. All rights reserved.</string>
    <string name="add_page">ADD PAGE</string>
    <string name="filter">FILTER</string>
    <string name="delete_all">DELETE ALL</string>
    <string name="color_document_filter">Color Document Filter</string>
    <string name="scanbot_binarization_filter">Scanbot Binarization Filter</string>
    <string name="custom_binarization_filter">Custom Binarization Filter</string>
    <string name="brightness_filter">Brightness Filter</string>
    <string name="contrast_filter">Contrast Filter</string>
    <string name="grayscale_filter">Grayscale Filter</string>
    <string name="white_black_point_filter">White Black Point Filter</string>
    <string name="legacy_low_light_binarization_filter">Legacy Low Light Binarization Filter</string>
    <string name="legacy_sensitive_binarization_filter">Legacy Sensitive Binarization Filter</string>
    <string name="legacy_low_light_binarization_filter_2">Legacy Low Light Binarization Filter 2</string>
    <string name="legacy_edge_highlight_filter">Legacy Edge Highlight Filter</string>
    <string name="legacy_deep_binarization_filter">Legacy Deep Binarization Filter</string>
    <string name="legacy_otsu_binarization_filter">Legacy Otsu Binarization Filter</string>
    <string name="legacy_clean_background_filter">Legacy Clean Background Filter</string>
    <string name="legacy_color_document_filter">Legacy Color Document Filter</string>
    <string name="legacy_color_filter">Legacy Color Filter</string>
    <string name="legacy_grayscale_filter">Legacy Grayscale Filter</string>
    <string name="legacy_binarized_filter">Legacy Binarized Filter</string>
    <string name="legacy_pure_binarized_filter">Legacy Pure Binarized Filter</string>
    <string name="legacy_black_amp_white_filter"><![CDATA[Legacy Black & White Filter]]></string>
    <string name="none">None</string>
    <string name="crop_amp_rotate"><![CDATA[CROP & ROTATE]]></string>
    <string name="delete">DELETE</string>
    <string name="page_title">Page</string>
    <string name="the_demo_expired">The demo app will terminate because of the missing license key. Get your free 30-day license today!</string>
    <string name="demo_expired">Demo Expired</string>
    <string name="save">Save</string>
    <string name="scan_results">Scan Results</string>
    <string name="cancel_dialog_button">Cancel</string>
    <string name="copy_dialog_button">Copy</string>
    <string name="get_license">get license</string>
    <string name="mrz_document_type">Type:</string>
    <string name="mrz_document_country">Country:</string>
    <string name="mrz_document_code">Serial Number:</string>
    <string name="mrz_first_name">First Name:</string>
    <string name="mrz_last_name">Last Name:</string>
    <string name="mrz_issuing_organization">issuingStateOrOrganization:</string>
    <string name="mrz_document_of_issue">departmentOfIssuance:</string>
    <string name="mrz_nationality">nationality:</string>
    <string name="mrz_dob">Birthday:</string>
    <string name="mrz_gender">Gender:</string>
    <string name="mrz_date_expiry">dateOfExpiry:</string>
    <string name="mrz_personal_number">personalNumber:</string>
    <string name="mrz_optional1">optional1:</string>
    <string name="mrz_optional2">optional2:</string>
    <string name="mrz_discreet_issuing_organization">discreetIssuingStateOrOrganization:</string>
    <string name="mrz_valid_check_digits_count">validCheckDigitsCount:</string>
    <string name="mrz_check_digits_count">checkDigitsCount:</string>
    <string name="mrz_checksums">Checksums:</string>
    <string name="travel_doc_type">travelDocType:</string>
    <string name="save_with_ocr">Save as PDF with OCR</string>
    <string name="save_without_ocr">Save as PDF</string>
    <string name="importing_and_processing">Importing selected image and running auto document detection...</string>
    <string name="share_title">Select Image</string>
    <string name="error_openning_document">Error while opening the document</string>
    <string name="encrypted_document_saved">Encrypted PDF file is saved to: %s. You need to unencrypt it before opening</string>
    <string name="bitmap_is_null_error">Bitmap is null</string>
    <string name="license_plate_flow_finished">License plate scanning flow finished</string>
    <string name="scan_text_data">Scan data</string>
    <string name="scan_vin">Scan VIN</string>
    <string name="scan_license_plate">Scan EU license plate</string>
    <string name="scan_generic_document">Scan Generic Document</string>
    <string name="scan_check">Scan check</string>
</resources>
