<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/sheetColor"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <Button
            android:id="@+id/colorDocumentFilter"
            style="@style/Scanbot.Demo.MaterialTwoButtonTeaser.Button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:text="@string/color_document_filter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="#1effffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/colorDocumentFilter" />

        <Button
            android:id="@+id/scanbotBinarizationFilter"
            style="@style/Scanbot.Demo.MaterialTwoButtonTeaser.Button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:text="@string/scanbot_binarization_filter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/colorDocumentFilter" />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="#1effffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scanbotBinarizationFilter" />

        <Button
            android:id="@+id/customBinarizationFilter"
            style="@style/Scanbot.Demo.MaterialTwoButtonTeaser.Button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:text="@string/custom_binarization_filter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scanbotBinarizationFilter" />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="#1effffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/customBinarizationFilter" />

        <Button
            android:id="@+id/brightnessFilter"
            style="@style/Scanbot.Demo.MaterialTwoButtonTeaser.Button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:text="@string/brightness_filter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/customBinarizationFilter" />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="#1effffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/brightnessFilter" />

        <Button
            android:id="@+id/contrastFilter"
            style="@style/Scanbot.Demo.MaterialTwoButtonTeaser.Button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:text="@string/contrast_filter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/brightnessFilter" />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="#1effffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contrastFilter" />

        <Button
            android:id="@+id/grayscaleFilter"
            style="@style/Scanbot.Demo.MaterialTwoButtonTeaser.Button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:text="@string/grayscale_filter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contrastFilter" />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="#1effffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/grayscaleFilter" />

        <Button
            android:id="@+id/whiteBlackPointFilter"
            style="@style/Scanbot.Demo.MaterialTwoButtonTeaser.Button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:text="@string/white_black_point_filter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/grayscaleFilter" />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="#1effffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/whiteBlackPointFilter" />


        <Button
            android:id="@+id/legacyLowLightBinarizationFilter"
            style="@style/Scanbot.Demo.MaterialTwoButtonTeaser.Button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:text="@string/legacy_low_light_binarization_filter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/whiteBlackPointFilter" />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="#1effffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/legacyLowLightBinarizationFilter" />


        <Button
            android:id="@+id/legacyLowLightBinarizationFilter2"
            style="@style/Scanbot.Demo.MaterialTwoButtonTeaser.Button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:text="@string/legacy_low_light_binarization_filter_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/legacyLowLightBinarizationFilter" />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="#1effffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/legacyLowLightBinarizationFilter2" />

        <Button
            android:id="@+id/legacyEdgeHighlightFilter"
            style="@style/Scanbot.Demo.MaterialTwoButtonTeaser.Button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:text="@string/legacy_edge_highlight_filter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/legacyLowLightBinarizationFilter2" />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="#1effffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/legacyEdgeHighlightFilter" />

        <Button
            android:id="@+id/legacyDeepBinarizationFilter"
            style="@style/Scanbot.Demo.MaterialTwoButtonTeaser.Button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:text="@string/legacy_deep_binarization_filter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/legacyEdgeHighlightFilter" />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="#1effffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/legacyDeepBinarizationFilter" />

        <Button
            android:id="@+id/legacyOtsuBinarizationFilter"
            style="@style/Scanbot.Demo.MaterialTwoButtonTeaser.Button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:text="@string/legacy_otsu_binarization_filter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/legacyDeepBinarizationFilter" />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="#1effffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/legacyOtsuBinarizationFilter" />

        <Button
            android:id="@+id/legacyCleanBackgroundFilter"
            style="@style/Scanbot.Demo.MaterialTwoButtonTeaser.Button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:text="@string/legacy_clean_background_filter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/legacyOtsuBinarizationFilter" />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="#1effffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/legacyCleanBackgroundFilter" />

        <Button
            android:id="@+id/legacyColorDocumentFilter"
            style="@style/Scanbot.Demo.MaterialTwoButtonTeaser.Button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:text="@string/legacy_color_document_filter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/legacyCleanBackgroundFilter" />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="#1effffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/legacyColorDocumentFilter" />

        <Button
            android:id="@+id/legacyColorFilter"
            style="@style/Scanbot.Demo.MaterialTwoButtonTeaser.Button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:text="@string/legacy_color_filter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/legacyColorDocumentFilter" />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="#1effffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/legacyColorFilter" />

        <Button
            android:id="@+id/legacyGrayscaleFilter"
            style="@style/Scanbot.Demo.MaterialTwoButtonTeaser.Button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:text="@string/legacy_grayscale_filter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/legacyColorFilter" />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="#1effffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/legacyGrayscaleFilter" />

        <Button
            android:id="@+id/legacyBinarizedFilter"
            style="@style/Scanbot.Demo.MaterialTwoButtonTeaser.Button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:text="@string/legacy_binarized_filter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/legacyGrayscaleFilter" />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="#1effffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/legacyBinarizedFilter" />

        <Button
            android:id="@+id/legacyPureBinarizedFilter"
            style="@style/Scanbot.Demo.MaterialTwoButtonTeaser.Button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:text="@string/legacy_pure_binarized_filter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/legacyBinarizedFilter" />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="#1effffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/legacyPureBinarizedFilter" />

        <Button
            android:id="@+id/legacyBlackAndWhiteFilter"
            style="@style/Scanbot.Demo.MaterialTwoButtonTeaser.Button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:text="@string/legacy_black_amp_white_filter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/legacyPureBinarizedFilter" />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="#1effffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/legacyBlackAndWhiteFilter" />

        <Button
            android:id="@+id/legacySensitiveBinarizationFilter"
            style="@style/Scanbot.Demo.MaterialTwoButtonTeaser.Button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:text="@string/legacy_sensitive_binarization_filter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/legacyBlackAndWhiteFilter" />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="#1effffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/legacySensitiveBinarizationFilter" />

        <Button
            android:id="@+id/none"
            style="@style/Scanbot.Demo.MaterialTwoButtonTeaser.Button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:text="@string/none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/legacySensitiveBinarizationFilter" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>

